// Copyright 2021-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message ProtoGearRatioLimit {
  int32 gear = 1;
  double high_limit = 2;
  double low_limit = 3;
}

message ProtoRpcRequest {
  int32 stand_id = 1;
  int32 timestamp = 2;
  Type type = 3;
  enum Type {
    UNSPECIFIED = 0;
    DATA_COLLECTION_START_MANUAL_RECORD_COMMAND = 1;
  }
  DataCollectionStartManualRecordCommand data_collection_start_manual_record_command = 4;
}

message DataCollectionStartManualRecordCommand {}
